--- a/debian/runescape.6
+++ b/debian/runescape.6
@@ -1,4 +1,4 @@
-.TH runescape "6" "July 2016" "RUNESCAPE" "Faces a war in a fantasy world"
+.TH runescape "6" "October 2017" "RUNESCAPE" "Faces a war in a fantasy world"
 .SH NAME
 runescape \- offers players a huge variety of benefits such as hundreds of additional quests and adventures, a larger game world to explore, exclusive skills and master and access to a whole host of minigames.
 .br
@@ -91,7 +91,7 @@ Most players use a mouse as their pointing device. This will include the ability
 - Another time players must right-click is when combining two food items that are both edible, and some other situations where they would otherwise eat or drink an item instead of handing it over.
 .br
 .SH AUTHOR
-This script was created and written by Carlos Donizete Froes [a.k.a coringao] <coringao@riseup.net>
+This script was created and written by Carlos Donizete Froes [a.k.a coringao].
 .PP
-This manual page was written by Carlos Donizete Froes [a.k.a coringao] <coringao@riseup.net>, for the Debian project (but may be used by others).
+This manual page was written by Carlos Donizete Froes [a.k.a coringao], for the Debian project (but may be used by others).
 
