--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,17 @@
+runescape (0.2-1) unstable; urgency=medium
+
+  * New upstream release
+  * Switch to compat level 10
+  * debian/control:
+    + Changed homepage link
+    + Bump debhelper compat to 10
+    + Declare compliance with Debian Policy: 4.1.1
+  * Fixed d/upstream/metadata
+  * Updated d/copyright
+  * Added autopkgtest: Running the tests in directory 'd/tests/project'
+
+ -- Carlos Donizete Froes <coringao@riseup.net>  Tue, 24 Oct 2017 15:17:08 -0200
+
 runescape (0.1-4) unstable; urgency=medium
 
   * debian/control:
