--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 runescape (0.2-1) unstable; urgency=medium
 
-  * New upstream release
+  * New upstream release 
   * Switch to compat level 10
   * debian/control:
     + Changed homepage link
@@ -9,7 +9,9 @@ runescape (0.2-1) unstable; urgency=medium
   * Fixed d/upstream/metadata
   * Fixed d/watch
   * Updated d/copyright
-  * Added autopkgtest: Running the tests in directory 'd/tests/project'
+  * Added autopkgtest
+  * Changed icon format and fixed bug in desktop file (Closes: Bug#866227)
+  * Commented line has been added about script procedure (Closes: Bug#879784)
 
  -- Carlos Donizete Froes <coringao@riseup.net>  Wed, 25 Oct 2017 21:03:15 -0200
 
