--- a/debian/changelog
+++ b/debian/changelog
@@ -1,10 +1,13 @@
 runescape (0.2-2) unstable; urgency=medium
 
-  * Team upload
-  * Added 'XS-Autobuild: yes' in debian/control
-  * Notification of the 'disclaimer' and about 'autobuilding' in d/copyright
+  * Added the 'XS-Autobuild: yes' header to d/control
+  * Added a note about autobuilding to d/copyright
+  * debian/control:
+    + Changed Vcs-* URLs to salsa.d.o
+    + Bump debhelper compat to 11
+    + Declare compliance with Debian Policy: 4.1.3
 
- -- Carlos Donizete Froes <coringao@riseup.net>  Wed, 08 Nov 2017 01:19:56 -0200
+ -- Carlos Donizete Froes <coringao@riseup.net>  Sun, 31 Dec 2017 16:05:30 -0200
 
 runescape (0.2-1) unstable; urgency=medium
 
