--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,9 @@
+version: 0.3.1
+  * Created the game manpage
+  * Changed script execution functions
+  * Replaced icon in png format
+  * Makefile version updated to 0.3.1
+
 version: 0.3
   * Makefile version updated to 0.3
   * Changed version of 'Runescape' to 'Old School Runescape'
